--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                     <!-- Auto Slide Image -->
                         <div class="slideshow-container">
                             <div class="mySlides fade">
+                                <img src="assets/img/cotage.jpg">
+                            </div>
+                            <div class="mySlides fade">
+                                <img src="assets/img/tortoise.jpg">
+                            </div>
+                            <div class="mySlides fade">
                                 <img src="assets/img/mountain.jpg">
                             </div>
                         </div>
